# scamshield.ai

./: .gitignore  README.md  app.py  gradio_interface.py  pyproject.toml  requirements.txt
src/ai_scam_phishing_detector/: crew.py  main.py
src/ai_scam_phishing_detector/config/: agents.yaml  tasks.yaml
src/ai_scam_phishing_detector/tools/: __init__.py  extract_phone_number_tool.py  link_analysis_tool.py  search_reputation_tool.py  text_scam_analysis_tool.py
