[project]
name = "ai_scam_phishing_detector"
version = "0.1.0"
description = "ai-scam-phishing-detector using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
ai_scam_phishing_detector = "ai_scam_phishing_detector.main:run"
run_crew = "ai_scam_phishing_detector.main:run"
train = "ai_scam_phishing_detector.main:train"
replay = "ai_scam_phishing_detector.main:replay"
test = "ai_scam_phishing_detector.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
